--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       --text: #1f2937;
       --muted: #6b7280;
       --error: #b91c1c;
+
       --success: #16a34a;
       --warning: #d97706;
+      --border: #d1d5db;
     }
 
     * { box-sizing: border-box; }
@@ -38,13 +40,13 @@
       gap: 20px;
     }
 
-    h1 { margin: 0 0 6px 0; }
+    h1 { margin: 0 0 8px 0; }
     h2 { margin: 0 0 12px 0; font-size: 18px; }
 
     .subtitle {
+      margin: 0;
       color: var(--muted);
       font-size: 14px;
-      margin: 0;
     }
 
     .card {
@@ -54,18 +56,14 @@
       box-shadow: 0 20px 40px rgba(0,0,0,0.08);
     }
 
-    label {
-      font-weight: 600;
-      margin-bottom: 8px;
-      display: block;
-    }
+    label { font-weight: 600; margin-bottom: 8px; display: block; }
 
     input, select {
       width: 100%;
       padding: 14px 16px;
       font-size: 16px;
       border-radius: 10px;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       margin-bottom: 16px;
       background: #fff;
     }
@@ -94,76 +92,81 @@
       margin-top: 8px;
     }
 
-    button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
+    button:disabled { opacity: 0.6; cursor: not-allowed; }
 
-    /* ---------- Toggles ---------- */
-    .modeToggle,
-    .subToggle {
+    /* ---------------------------
+       Mobile-friendly pill toggles
+       --------------------------- */
+    .toggleGroup {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 12px;
+      gap: 10px;
       margin-bottom: 16px;
     }
 
-    .modeToggle label,
-    .subToggle label {
+    .togglePill {
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 12px;
+      gap: 8px;
+      padding: 12px 14px;
       border-radius: 12px;
-      border: 1px solid #d1d5db;
-      font-weight: 700;
-      cursor: pointer;
+      border: 1px solid var(--border);
       background: #fff;
       color: var(--muted);
+      font-weight: 800;
+      cursor: pointer;
       user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      transition: background 160ms ease, border-color 160ms ease, color 160ms ease;
+      min-height: 44px; /* iOS-friendly tap target */
     }
 
-    .modeToggle input,
-    .subToggle input {
-      display: none;
+    /* Hide the radio visually but keep it accessible */
+    .togglePill input {
+      position: absolute;
+      inset: 0;
+      opacity: 0;
+      cursor: pointer;
+      margin: 0;
     }
 
-    .modeToggle input:checked + span,
-    .subToggle input:checked + span {
+    /* Selected state */
+    .togglePill input:checked ~ .labelText {
       color: var(--primary);
     }
 
-    .modeToggle label:has(input:checked),
-    .subToggle label:has(input:checked) {
+    .togglePill:has(input:checked) {
       border-color: var(--primary);
       background: #eef2ff;
       color: var(--primary);
     }
 
+    /* Ensure good layout on very small screens */
+    @media (max-width: 420px) {
+      .toggleGroup {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .subToggleWrap {
+      margin: 10px 0 8px;
+    }
+
     .helper {
-      font-size: 13px;
       color: var(--muted);
+      font-size: 13px;
       margin-top: -6px;
       margin-bottom: 16px;
     }
 
-    .result {
-      margin-top: 24px;
-    }
+    .result { margin-top: 24px; }
 
     .status {
-      font-weight: 800;
+      font-weight: 900;
       margin-bottom: 6px;
     }
-
-    .batchSummary span {
-      font-weight: 700;
-    }
-
-    .batchSummary .delivered { color: var(--success); }
-    .batchSummary .pending,
-    .batchSummary .transit { color: var(--warning); }
-    .batchSummary .error { color: var(--error); }
 
     .error {
       color: var(--error);
@@ -171,7 +174,14 @@
       margin-top: 16px;
     }
 
-    /* ---------- Skeleton ---------- */
+    /* Events (you were rendering .event in JS but the class was missing here) */
+    .event {
+      border-left: 3px solid var(--primary);
+      padding-left: 12px;
+      margin-bottom: 12px;
+    }
+
+    /* Skeleton */
     .skeleton {
       height: 14px;
       background: linear-gradient(
@@ -191,14 +201,14 @@
       100% { background-position: -100% 0; }
     }
 
-    /* ---------- Fade in ---------- */
+    /* Fade-in */
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(6px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
     .fadeIn {
-      animation: fadeInUp 220ms ease-out;
+      animation: fadeInUp 240ms ease-out;
     }
 
     footer {
@@ -226,14 +236,14 @@
   <div class="card">
 
     <!-- MODE -->
-    <div class="modeToggle">
-      <label>
+    <div class="toggleGroup" role="radiogroup" aria-label="Mode">
+      <label class="togglePill">
         <input type="radio" name="mode" value="single" checked />
-        <span>Single</span>
+        <span class="labelText">Single</span>
       </label>
-      <label>
+      <label class="togglePill">
         <input type="radio" name="mode" value="batch" />
-        <span>Batch</span>
+        <span class="labelText">Batch</span>
       </label>
     </div>
 
@@ -241,21 +251,25 @@
     <div id="singleSection">
       <h2>Single tracking</h2>
 
-      <div class="subToggle">
-        <label>
-          <input type="radio" name="singleMode" value="tracking" checked />
-          <span>Tracking</span>
-        </label>
-        <label>
-          <input type="radio" name="singleMode" value="reference" />
-          <span>Reference</span>
-        </label>
+      <!-- shipment/reference toggle -->
+      <div class="subToggleWrap">
+        <div class="toggleGroup" role="radiogroup" aria-label="Single search type">
+          <label class="togglePill">
+            <input type="radio" name="singleMode" value="tracking" checked />
+            <span class="labelText">Tracking</span>
+          </label>
+          <label class="togglePill">
+            <input type="radio" name="singleMode" value="reference" />
+            <span class="labelText">Reference</span>
+          </label>
+        </div>
       </div>
 
       <label id="singleLabel">Tracking number</label>
       <input id="singleInput" placeholder="e.g. 1Z999AA10123456784" />
       <div id="singleHelper" class="helper">Use a tracking number from the courier.</div>
 
+      <!-- SINGLE RESULT -->
       <div id="resultSingle" class="result" style="display:none;">
         <div class="status" id="singleStatus"></div>
         <div class="subtitle" id="singleCarrier"></div>
@@ -277,14 +291,15 @@
         <option value="csv">CSV</option>
       </select>
 
+      <!-- BATCH RESULT -->
       <div id="resultBatch" class="result" style="display:none;">
-        <div class="status batchSummary" id="batchSummary"></div>
+        <div class="status" id="batchSummary"></div>
         <button id="downloadBtn" class="secondary" type="button">Download results</button>
         <button id="clearBtn" class="clear" type="button">Clear</button>
       </div>
     </div>
 
-    <button id="trackBtn">Track shipments</button>
+    <button id="trackBtn" type="button">Track shipments</button>
 
     <div id="loading" style="display:none;">
       <div class="skeleton"></div>
@@ -302,8 +317,264 @@
 </div>
 
 <script>
-  // LOGIC IS UNCHANGED — ONLY UI WAS POLISHED
-  // (Your existing JS from previous step remains valid here)
+  // -------------------------
+  // Elements
+  // -------------------------
+  const modeRadios = document.querySelectorAll('input[name="mode"]');
+  const singleModeRadios = document.querySelectorAll('input[name="singleMode"]');
+
+  const singleSection = document.getElementById('singleSection');
+  const batchSection = document.getElementById('batchSection');
+
+  const trackBtn = document.getElementById('trackBtn');
+  const loading = document.getElementById('loading');
+  const errorEl = document.getElementById('error');
+
+  // Single
+  const singleLabel = document.getElementById('singleLabel');
+  const singleInput = document.getElementById('singleInput');
+  const singleHelper = document.getElementById('singleHelper');
+
+  const resultSingle = document.getElementById('resultSingle');
+  const singleStatus = document.getElementById('singleStatus');
+  const singleCarrier = document.getElementById('singleCarrier');
+  const singleEvents = document.getElementById('singleEvents');
+  const clearSingleBtn = document.getElementById('clearSingleBtn');
+
+  // Batch
+  const batchFile = document.getElementById('batchFile');
+  const exportFormat = document.getElementById('exportFormat');
+
+  const resultBatch = document.getElementById('resultBatch');
+  const batchSummary = document.getElementById('batchSummary');
+  const downloadBtn = document.getElementById('downloadBtn');
+  const clearBtn = document.getElementById('clearBtn');
+
+  // -------------------------
+  // State
+  // -------------------------
+  let mode = 'single';
+  let singleMode = 'tracking';
+  let lastDownloadUrl = null;
+
+  // -------------------------
+  // Helpers
+  // -------------------------
+  function resetUI() {
+    errorEl.style.display = 'none';
+    errorEl.textContent = '';
+
+    resultSingle.style.display = 'none';
+    singleEvents.innerHTML = '';
+
+    resultBatch.style.display = 'none';
+    batchSummary.textContent = '';
+
+    if (lastDownloadUrl) {
+      try { URL.revokeObjectURL(lastDownloadUrl); } catch (_) {}
+      lastDownloadUrl = null;
+    }
+  }
+
+  function showError(msg) {
+    errorEl.textContent = msg || 'Something went wrong.';
+    errorEl.style.display = 'block';
+  }
+
+  function setLoading(isLoading) {
+    loading.style.display = isLoading ? 'block' : 'none';
+    trackBtn.disabled = isLoading;
+    trackBtn.textContent = isLoading ? 'Processing…' : 'Track shipments';
+  }
+
+  function fadeIn(el) {
+    el.classList.remove('fadeIn');
+    void el.offsetWidth; // restart animation
+    el.classList.add('fadeIn');
+  }
+
+  function headerInt(res, name) {
+    const v = res.headers.get(name);
+    if (v === null || v === undefined || v === '') return null;
+    const n = Number(v);
+    return Number.isFinite(n) ? n : null;
+  }
+
+  // -------------------------
+  // Mode switch
+  // -------------------------
+  modeRadios.forEach(r => {
+    r.addEventListener('change', e => {
+      mode = e.target.value;
+      resetUI();
+
+      singleSection.style.display = mode === 'single' ? 'block' : 'none';
+      batchSection.style.display = mode === 'batch' ? 'block' : 'none';
+
+      // keep focus sensible
+      if (mode === 'single') singleInput.focus();
+    });
+  });
+
+  // Single mode switch (tracking/reference)
+  singleModeRadios.forEach(r => {
+    r.addEventListener('change', e => {
+      singleMode = e.target.value;
+
+      if (singleMode === 'tracking') {
+        singleLabel.textContent = 'Tracking number';
+        singleInput.placeholder = 'e.g. 1Z999AA10123456784';
+        singleHelper.textContent = 'Use a tracking number from the courier.';
+      } else {
+        singleLabel.textContent = 'Reference';
+        singleInput.placeholder = 'e.g. ORDER-12345';
+        singleHelper.textContent = 'Use your internal shipment / order reference.';
+      }
+
+      resetUI();
+      singleInput.focus();
+    });
+  });
+
+  // -------------------------
+  // Main action
+  // -------------------------
+  trackBtn.addEventListener('click', async () => {
+    resetUI();
+    setLoading(true);
+
+    try {
+      // -------------------
+      // BATCH
+      // -------------------
+      if (mode === 'batch') {
+        if (!batchFile.files[0]) {
+          throw new Error('Please upload a file.');
+        }
+
+        const formData = new FormData();
+        formData.append('file', batchFile.files[0]);
+        formData.append('export_format', exportFormat.value);
+
+        const res = await fetch('https://api.transportal.gr/webhook/track-batch', {
+          method: 'POST',
+          body: formData,
+        });
+
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+
+        const total = headerInt(res, 'x-batch-total');
+        const delivered = headerInt(res, 'x-batch-delivered');
+        const pending = headerInt(res, 'x-batch-pending');
+        const inTransit = headerInt(res, 'x-batch-in-transit');
+        const errorCount = headerInt(res, 'x-batch-error');
+
+        const blob = await res.blob();
+        const url = URL.createObjectURL(blob);
+        lastDownloadUrl = url;
+
+        if (total === null) {
+          batchSummary.textContent = 'Batch processed · download ready';
+        } else {
+          const parts = [`${total} shipments processed`];
+          if (delivered !== null) parts.push(`${delivered} delivered`);
+          if (pending !== null && pending > 0) parts.push(`${pending} pending`);
+          if (inTransit !== null && inTransit > 0) parts.push(`${inTransit} in transit`);
+          if (errorCount !== null && errorCount > 0) parts.push(`${errorCount} errors`);
+          batchSummary.textContent = parts.join(' · ');
+        }
+
+        resultBatch.style.display = 'block';
+        fadeIn(resultBatch);
+
+        downloadBtn.onclick = () => {
+          const a = document.createElement('a');
+          a.href = url;
+          a.download =
+            exportFormat.value === 'xlsx'
+              ? 'tracking-results.xlsx'
+              : 'tracking-results.csv';
+          document.body.appendChild(a);
+          a.click();
+          a.remove();
+        };
+
+        return;
+      }
+
+      // -------------------
+      // SINGLE
+      // -------------------
+      const value = singleInput.value.trim();
+      if (!value) throw new Error('Please enter a tracking number or reference.');
+
+      const payload =
+        singleMode === 'tracking'
+          ? { tracking: value }
+          : { reference: value };
+
+      const res = await fetch('https://api.transportal.gr/webhook/track-mvp', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload),
+      });
+
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
+
+      let data = await res.json();
+      if (Array.isArray(data)) data = data[0];
+
+      if (typeof data?.error === 'string' && data.error.trim().length > 0) {
+        showError(data.error);
+      }
+
+      singleStatus.textContent = `Status: ${data?.status || 'Unknown'}`;
+      singleCarrier.textContent = `Carrier: ${
+        data?.carrier && data.carrier !== 'UNKNOWN' ? data.carrier : 'Not detected yet'
+      }`;
+
+      const events = Array.isArray(data?.events) ? data.events : [];
+      if (!events.length) {
+        singleEvents.innerHTML = `<div class="subtitle">No tracking events yet.</div>`;
+      } else {
+        singleEvents.innerHTML = events.map(e => {
+          const dt = e?.datetime ? new Date(e.datetime).toLocaleString() : '';
+          const loc = e?.location ? ` · ${e.location}` : '';
+          const status = e?.status || 'Update';
+          return `
+            <div class="event">
+              <div><strong>${status}</strong></div>
+              <div class="subtitle">${dt}${loc}</div>
+              ${e?.description ? `<div class="subtitle">${e.description}</div>` : ''}
+            </div>
+          `;
+        }).join('');
+      }
+
+      resultSingle.style.display = 'block';
+      fadeIn(resultSingle);
+
+    } catch (err) {
+      console.error(err);
+      showError(err?.message || 'Something went wrong.');
+    } finally {
+      setLoading(false);
+    }
+  });
+
+  // -------------------------
+  // Clear buttons
+  // -------------------------
+  clearBtn.onclick = () => {
+    batchFile.value = '';
+    resetUI();
+  };
+
+  clearSingleBtn.onclick = () => {
+    singleInput.value = '';
+    resetUI();
+    singleInput.focus();
+  };
 </script>
 
 </body>
