--- a/index.html
+++ b/index.html
@@ -344,8 +344,9 @@
   // Single
   const singleLabel = document.getElementById('singleLabel');
   const singleInput = document.getElementById('singleInput');
+  
   const singleHelper = document.getElementById('singleHelper');
-
+  const carrierSelect = document.getElementById('carrierSelect');
   const resultSingle = document.getElementById('resultSingle');
   const singleStatus = document.getElementById('singleStatus');
   const singleCarrier = document.getElementById('singleCarrier');
